﻿[B]Version 2.3.3[/B]
[+] Поиск: Настройка количества потоков при поиске

[B]Version 2.3.2[/B]
[+] Control Center: Исправлена работа без серчеров
[+] Списки Медиа: Проверка отсутствия серчера
[+] Списки Медиа: Исправлен ThePirateBay
[+] Торрент-клиент: Добавлена возможность указать путь Deluge

[B]Version 2.3.1[/B]
[+] Загрузка: Исправлена ошибка удаления базы данных
[+] Списки Медиа: Исправлен IMDB TOP 250
[+] Проигрыватель: [B]Добавлена полная поддержка Android (arm)[/B]
[+] Поиск: Все серчеры вынесены из плагина

[B]Version 2.3.0[/B]
[+] Поиск: Поиск существенно ускорился, стал многопоточным (пока 3 потока одновременно)
[+] Поиск: Добавлена поддержка внешних серчеров с индивидуальными настройками (в стиле Pulsar)
[+] Обновлено окно Torrenter Global Control Center
[+] Поиск: Исправлен TFileME (теперь внешний)
[+] Поиск: Исправлен RuTrackeOrg (теперь внешний)

[B]Version 2.2.9[/B]
[+] .torrent Проигрыватель: Теперь .torrent не теряется при обновлении окна Kodi
[+] Проигрыватель: Улучшенная настройка сессии из cherrytorrent
[+] Списки Медиа: Обновление баз на русском

[B]Version 2.2.8[/B]
[+] Добавлен Украинский язык (by kharts)
[+] Торрент-клиент: Добавлены иконки торрент-клиентов (by kharts)

[B]Version 2.2.7[/B]
[+] Проигрыватель: User-friendly объяснение причины невозможности стриминга
[+] Торрент-клиент: Исправлено добавление magnet

[B]Version 2.2.5[/B]
[+] Списки Медиа: Исправлен KickAssSo
[+] Списки Медиа: Исправлен поиск мета-данных TheMovieDB вызывавший ошибку
[+] Поиск: Исправлен KickAssSo
[+] Поиск: Добавлен логин RiperAM

[B]Version 2.2.4[/B]
[+] Проигрыватель: Поддержка музыки (проигрывание следующего файла).
[+] Торрент-клиент: Исправлен прогресс Deluge.

[B]Version 2.2.3[/B]
[+] Проигрыватель: Добавлена возможность запускать через .strm файлы (plugin://plugin.video.torrenter/?action=playSTRM&url=URL_ENCODED_MAGNET_PATH_HTTP)

[B]Version 2.2.2[/B]
[+] Списки Медиа: Обновлен KickAssSo (by GriffeyJuni0r)
[+] Поиск: Исправлен RuTor