@@ -40,6 +40,9 @@
     <string id="30040">Custom search option phrase</string>
     <string id="30041">Encryption</string>
     <string id="30042">Search Thread Number</string>
+    <string id="30043">Delete files</string>
+    <string id="30044">Save files</string>
+    <string id="30045">Ask to save</string>
     <string id="30101">Interface</string>
     <string id="30102">P2P Network</string>
     <string id="30103">Advanced</string>
