@@ -16,9 +16,9 @@
         <setting id="debug"             type="bool"     label="30015" default="false"/>
     </category>
     <category label="30102">
-        <setting id="torrent_player"    type="enum"     label="30023" default="0" lvalues="30021|30022" />
+        <setting id="torrent_player"    type="enum"     label="30023" default="0"       lvalues="30021|30022" />
         <setting id="storage"           type="folder"   label="30004" default=""/>
-        <setting id="keep_files"        type="bool"     label="30008" default="true"/>
+        <setting id="keep_files"        type="enum"     label="30008" default="1"       lvalues="30043|30044|30045"/>
         <setting id="ask_dir"           type="bool"     label="30031" default="false"   enable="eq(-1,true)" />
         <setting id="next_dl"           type="bool"     label="30013" default="true"    visible="eq(-4,0)"/>
         <setting id="upload_limit"      type="number"   label="30010" default="0"       visible="eq(-5,0)"/>
