@@ -1,4 +1,10 @@
-﻿[B]Version 2.3.3[/B]
+﻿English changelog at http://bit.ly/1MfSVUP
+
+[B]Version 2.3.4[/B]
+[+] Проигрыватель: Новая настройка - спрашивать о сохранении файла
+[+] Списки Медиа: Исправлен TheMovieDB для python 2.6
+
+[B]Version 2.3.3[/B]
 [+] Поиск: Настройка количества потоков при поиске
 
 [B]Version 2.3.2[/B]
